<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nagopy.android.mypkgs.MainActivity">
    <item
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        app:showAsAction="withText|ifRoom">
        <menu>
            <item
                android:id="@+id/action_share_label"
                android:title="@string/action_share_label" />
            <item
                android:id="@+id/action_share_package_name"
                android:title="@string/action_share_package_name" />
            <item
                android:id="@+id/action_share_label_and_package_name"
                android:title="@string/action_share_label_and_package_name" />
            <item
                android:id="@+id/action_share_csv"
                android:title="@string/action_share_csv" />
        </menu>
    </item>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="withText|ifRoom" />
</menu>
